--- a/DDShortener/Content/Site.css
+++ b/DDShortener/Content/Site.css
@@ -39,3 +39,9 @@ input[type="checkbox"].input-validation-error {
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
 }
+
+.img-circle {
+    margin-top:20px;
+    border-radius: 50%;
+    width:200px;
+}
