--- a/DDShortener/Views/Shared/_LoginPartial.cshtml
+++ b/DDShortener/Views/Shared/_LoginPartial.cshtml
@@ -4,6 +4,9 @@
             @Html.AntiForgeryToken()
             <ul class="nav navbar-nav navbar-right">
                 <li>
+                    @Html.ActionLink("Game : 2048", "Game", "Home")
+                </li>
+                <li>
                     @Html.ActionLink("Logged In : " + User.Identity.Name, "Manage", "Account", routeValues: null, htmlAttributes: new { title = "Manage" })
                 </li>
                 <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
@@ -14,6 +17,9 @@
 else
 {
     <ul class="nav navbar-nav navbar-right">
+        <li>
+            @Html.ActionLink("Game : 2048", "Game", "Home")
+        </li>
         <li>@Html.ActionLink("Register", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
         <li>@Html.ActionLink("Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
     </ul>
